[package]
name = "tutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }

[[bin]]
name = "pwd"
path = "src/pwd.rs"

[[bin]]
name = "ls"
path = "src/ls.rs"

[[bin]]
name = "cat"
path = "src/cat.rs"

[[bin]]
name = "hex"
path = "src/hex.rs"

[[bin]]
name = "xxd"
path = "src/xxd.rs"

[[bin]]
name = "ascii"
path = "src/ascii.rs"
